--- a/AR/html/login.html
+++ b/AR/html/login.html
@@ -90,8 +90,8 @@
                 <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
             </div>
             <span>o utilice su contraseña de correo electrónico:</span>
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
+            <input type="email" placeholder="Email" name="username" required>
+            <input type="password" placeholder="Password" name="password" required>
             <a href="#">¿Ha olvidado su contraseña?</a>
             <button>Iniciar sesión</button>
         </form>
