--- a/AR/html/formulario.html
+++ b/AR/html/formulario.html
@@ -121,7 +121,7 @@
 
             <button type="submit">Registrar</button>
         </form>
-        <button id="loginBtn">Inicio de sesión</button>
+        <button type="submit" value="Iniciar Sesion">Inicio de sesión</button>
     </div>
 </div>
 
