--- a/AR/html/login.html
+++ b/AR/html/login.html
@@ -93,7 +93,7 @@
             <input type="email" placeholder="Email" name="username" required>
             <input type="password" placeholder="Password" name="password" required>
             <a href="#">¿Ha olvidado su contraseña?</a>
-            <button>Iniciar sesión</button>
+            <button value="Iniciar Sesión">Iniciar sesión</button>
         </form>
     </div>
     <div class="toggle-container">
