--- a/AR/html/doctors.html
+++ b/AR/html/doctors.html
@@ -24,7 +24,7 @@
     #addSintomaBtn {
             display: block;
             padding: 10px 20px;
-            margin: 0 auto;
+            margin: 0, 43%;
             border: 2px solid #07be94; 
             background-color: #07be94;
             text-align: center;
