--- a/Pdoc.html
+++ b/Pdoc.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
-  <link rel="icon" href="../assets/img/LOGOs.png">
+  <link rel="icon" href="LOGOs.png">
   <title>Medicgenely</title>
-  <link rel="stylesheet" href="../assets/css/maicons.css">
-  <link rel="stylesheet" href="../assets/css/bootstrap.css">
-  <link rel="stylesheet" href="../assets/vendor/owl-carousel/css/owl.carousel.css">
-  <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
-  <link rel="stylesheet" href="../assets/css/theme.css">
+  <link rel="stylesheet" href="maicons.css">
+  <link rel="stylesheet" href="bootstrap.css">
+  <link rel="stylesheet" href="owl.carousel.css">
+  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="theme.css">
   <style>
     /* Custom CSS styles */
     .chat-container {
