--- a/Ppac.html
+++ b/Ppac.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- ... (el contenido del head permanece igual) ... -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="copyright" content="MACode ID, https://macodeid.com/">
+    <link rel="icon" href="LOGOs.png">
+    <title>Medicgenely - Chat con Doctor</title>
+    <link rel="stylesheet" href="maicons.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="owl.carousel.css">
+    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="theme.css">
+    <style>
+      /* Custom CSS styles */
+      .chat-container {
+        height: 70vh;
+        overflow-y: scroll;
+      }
+    </style>
 </head>
 <body>
 
-  <!-- ... (el contenido del nav permanece igual) ... -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+        <div class="container10">
+          <a class="navbar-brand" href="index.html"><span class="text-primary">Medic</span>genely</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupport" aria-controls="navbarSupport" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupport">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="formulario.html">Cita</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="patient_profile.html">Perfil</a>
+              </li>
+              <li class="nav-item">
+                <a class="btn btn-primary ml-lg-3" href="login.html">Salir</a>
+              </li>
+            </ul>
+          </div> <!-- .navbar-collapse -->
+        </div> <!-- .container -->
+      </nav>
 
   <div class="container mt-5">
     <div class="row">
@@ -38,7 +78,9 @@
     </div>
   </div>
 
-  <!-- ... (scripts permanecen igual) ... -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <script>
     $(document).ready(function() {
