--- a/Ppac.html
+++ b/Ppac.html
@@ -57,6 +57,10 @@
             Paciente 1
             <span class="badge badge-primary badge-pill">Activo</span>
           </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            Paciente 2
+            <span class="badge badge-primary badge-pill">Activo</span>
+          </li>
         </ul>
       </div>
       <div class="col-md-8">
