--- a/about.html
+++ b/about.html
@@ -123,9 +123,9 @@
   
         <div class="col-sm-6 col-lg-3 py-3">
           <h5>Contact</h5>
-          <p class="footer-link mt-2">351 Willow Street Franklin, MA 02038</p>
-          <a href="#" class="footer-link">701-573-7582</a>
-          <a href="#" class="footer-link">healthcare@temporary.net</a>
+          <p class="footer-link mt-2">Calle Juan de Dios Batiz 711, 07700 Gustavo A. Madero, Mexico City</p>
+          <a href="#" class="footer-link">55-5729-6000</a>
+          <a href="#" class="footer-link">direccion_escom@ipn.mx</a>
 
           <h5 class="mt-3">Social Media</h5>
           <div class="footer-sosmed mt-3">
